Grease Pencil: Tool Tip Description for Layers > Display > "Show Only on Keyframed" checkbox not correct #95336

Closed
opened 2022-01-30 18:18:49 +01:00 by rd · 3 comments

System Information
Operating system: macOS-12.2-x86_64-i386-64bit 64 Bits
Graphics card: Intel(R) Iris(TM) Plus Graphics 655 Intel Inc. 4.1 INTEL-18.4.6

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-24 22:18, hash: 2bf519d211
Worked: (newest version of Blender that worked as expected)

Short description of error
The Tool Tip description for Layers > Display > "Show Only on Keyframed" checkbox is not clear / incorrect.
Show Only on Keyframed.png

In Paint Mode only display layers with keyframe in current frame

correction should be made to tool tip:

In Draw Mode only display layers with keyframe in current frame

The feature "only" works in "Draw Mode" in the 3D Viewport not "Paint Mode?" ( as far as I can tell)

As an artist I found this very confusing and Blender Documentation did not guide me to a solution either.

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]

  • Blender > New > 2D Animation
  • Properties Editor > Object Data Properties tab> "Layers" Panel> Sublayer "Display" >
  • Place cursor over checkbox labeled "Show Only on Keyframed"
  • tool tip will display

Please change the wording to:

In Draw Mode only display layers with keyframe in current frame

Thank you to all the Developers that are working on Grease Pencil....such a wonder tool to work with in 3D.
Your work is making the Visual Artist dreams come true!

Happy Blendering! 😀

Smartdog
We all learn by sharing what we know

**System Information** Operating system: macOS-12.2-x86_64-i386-64bit 64 Bits Graphics card: Intel(R) Iris(TM) Plus Graphics 655 Intel Inc. 4.1 INTEL-18.4.6 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-24 22:18, hash: `2bf519d211` Worked: (newest version of Blender that worked as expected) **Short description of error** The Tool Tip description for Layers > Display > "Show Only on Keyframed" checkbox is not clear / incorrect. ![Show Only on Keyframed.png](https://archive.blender.org/developer/F12835820/Show_Only_on_Keyframed.png) > In Paint Mode only display layers with keyframe in current frame correction should be made to tool tip: > In Draw Mode only display layers with keyframe in current frame The feature "***only***" works in "**Draw Mode**" in the 3D Viewport not "Paint Mode?" ( as far as I can tell) As an artist I found this very confusing and Blender Documentation did not guide me to a solution either. **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] - Blender > New > 2D Animation - Properties Editor > Object Data Properties tab> "Layers" Panel> Sublayer "Display" > - Place cursor over checkbox labeled "Show Only on Keyframed" - tool tip will display Please change the wording to: > In Draw Mode only display layers with keyframe in current frame Thank you to all the Developers that are working on Grease Pencil....such a wonder tool to work with in 3D. Your work is making the Visual Artist dreams come true! Happy Blendering! 😀 Smartdog We all learn by sharing what we know
Author

Added subscriber: @Smartdog

Added subscriber: @Smartdog
Antonio Vazquez self-assigned this 2022-01-30 23:10:46 +01:00

This issue was referenced by a04d0de039

This issue was referenced by a04d0de0399b4b530b430bb93975d830aa0ad1a2

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95336
No description provided.