Fix T95336: Wrong tooltip for Show Only on Keyframed checkbox

The "Paint" mode is wrong, must be "Draw"